# NBody-EuroHPC

./: .gitignore  CMakeLists.txt  CMakePresets.json  LEONARDO_NOTES.md  README.md  device_properties.txt  measure_ncm_murb.sh  performance_report.txt  temp.cu  test-bench.csv
cmake/Modules/: FindCADNA.cmake
scripts/: make_plots.py  make_plots_black.py  measure_energy.py  nbody_profiling.sh  parse_energy_log.py  plot_history_metrics.py  run_cpu.sh  run_gpu.sh  run_tests.sh
scripts/power_tracking_gpu_tile/: energy_report.txt
src/common/core/: Bodies.cpp  Bodies.hpp  BodiesAllocator.cpp  BodiesAllocator.hpp  CUDABodies.cu  CUDABodies.hpp  HistoryTrackingInterface.cpp  HistoryTrackingInterface.hpp  SimulationHistory.cpp  SimulationHistory.hpp  SimulationHistoryGPU.cu  SimulationHistoryGPU.hpp  SimulationNBodyInterface.cpp  SimulationNBodyInterface.hpp
src/common/ogl/: OGLSpheresVisu.cpp  OGLSpheresVisuGS.cpp
src/murb/: main.cpp
src/murb/implem/: SimulationNBodyCPUBarnersHut.hpp  SimulationNBodyCUDALeapfrog.cu  SimulationNBodyCUDALeapfrog.hpp  SimulationNBodyCUDAPropertyTracking.cu  SimulationNBodyCUDAPropertyTracking.hpp  SimulationNBodyCUDATile.cu  SimulationNBodyCUDATile.hpp  SimulationNBodyCUDATileAdvanced.cu  SimulationNBodyCUDATileAdvanced.hpp  SimulationNBodyCUDATileFullDevice.cu  SimulationNBodyCUDATileFullDevice.hpp  SimulationNBodyCUDATileFullDevice200k.cu  SimulationNBodyCUDATileFullDevice200k.hpp  SimulationNBodyHetero.cu  SimulationNBodyHetero.hpp  SimulationNBodyMultiNode.cpp  SimulationNBodyMultiNode.hpp  SimulationNBodyNaive.cpp  SimulationNBodyNaive.hpp  SimulationNBodyNaiveCadna.cpp  SimulationNBodyNaiveCadna.hpp  SimulationNBodyNop.cpp  SimulationNBodyNop.hpp  SimulationNBodyOpenMP.cpp  SimulationNBodyOpenMP.hpp  SimulationNBodyOpenMP_Exact.cpp  SimulationNBodyOpenMP_Exact.hpp  SimulationNBodyOpenMP_Green.cpp  SimulationNBodyOpenMP_Green.hpp  SimulationNBodyOptim.cpp  SimulationNBodyOptim.hpp  SimulationNBodyOptim_Exact.cpp  SimulationNBodyOptim_Exact.hpp  SimulationNBodySIMD.cpp  SimulationNBodySIMD.hpp  SimulationNBodySIMD_Exact.cpp  SimulationNBodySIMD_Exact.hpp
src/test/implem/: test_CUDABodies.cpp  test_SimulationHistory.cu  test_SimulationNBody.cpp
